samples/_failures_safe/1761668583_ed70b9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f8d1a24b.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_f8d1a24b.c:160:5: error: expected declaration or statement at end of input
  160 |     graph_reset(graph);
      |     ^~~~~~~~~~~
